# netvantage

./: .env.example  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile.agent  Dockerfile.processor  Dockerfile.server  LICENSE  README.md  Taskfile.yml  docker-compose.yml  go.mod
.github/workflows/: ci.yml
alertmanager/: alertmanager.yml
bgp-analyzer/: Dockerfile  config.example.yaml  pyproject.toml
bgp-analyzer/src/netvantage_bgp/: __init__.py  __main__.py  analyzer.py  config.py  prefix.py  publisher.py  rpki.py
bgp-analyzer/tests/: test_analyzer.py  test_prefix.py  test_rpki.py
cmd/agent/: main.go
cmd/processor/: main.go
cmd/server/: main.go
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md  api-reference.md  canary-developer-guide.md  concepts.md  deployment-guide.md  quickstart-bgp.md  quickstart.md  security-hardening.md
grafana/dashboards/: bgp-events.json  dns-overview.json  global-map.json  home.json  http-overview.json  ping-overview.json  platform-health.json  pop-comparison.json  target-drilldown.json  traceroute-overview.json
internal/agent/: agent.go
internal/domain/: errors.go  models.go
internal/processor/: processor.go  processor_test.go
internal/transport/: transport.go
migrations/: 001_initial_schema.sql  002_audit_log.sql
prometheus/: prometheus.yml
prometheus/rules/: bgp_alerts.yml  correlation_alerts.yml  dns_alerts.yml  http_alerts.yml  ping_alerts.yml  platform_alerts.yml  traceroute_alerts.yml
tests/: alert_rules_test.go  dashboard_test.go  helm_test.go  migration_test.go  proto_test.go
(+63 files in other folders)
